css/main.css
/* ... */
#menu{
    display: none;
    text-align: right;
}

#announcement{
	background-color: #595959;
	font-size: 18px;
	font-weight: bold;
	padding: 5px 0 10px;
	text-align: center;
	color: white;
}

#announcement a{
	color: #57a1d7;
}

/* HOME VIDEO */
#home-video, #home-video #page-title{
	width: 100%;
	height: calc( 100% - 100px );
	overflow: hidden;
}

#home-video #page-title{
	position: absolute;
	top: 100px;
	left: 0;
	background-image: url(../images/video-mask.png);
	background-size: cover;
	color: white;
	text-shadow: 0 0 5px black;
}

#home-video #page-title div, #home-video #scroll-indicator{
	position: absolute;
}

#home-video #page-title div{
	padding: 0 10% 20px 50px;
	bottom: 0;
}

#home-video #page-title p{
	margin: 0px;
}

#home-video #page-title #company{
    display: inline-block;
	border-bottom: 1px solid white;
	padding-bottom: 10px;
	}

#home-video #scroll-indicator{
	width: 100%;
	opacity: 0;
	margin: 0 0 120px -50px;
	font-size: 20px;
	line-height: 25px;
	font-weight: bold;
	color: #58A2D8;
	text-align: center;
	text-transform: uppercase;
}

#scroll-indicator a:hover {
  color: #58A2D8;
  text-decoration: none;
}

/* FOOTER */
footer{
  padding: 40px 80px;
  background-color: #EFF1F2;
  font-size: 16px;
  line-height: 22px;
  clear: both;
}

footer h4{
  font-size: 16px;
}

footer h4 a {
  color: #333;
  font-weight: 700;
}

footer > div{
  width: calc( 25% - 40px );
  float: left;
  padding: 0 20px;
}

footer > hr{
  clear: both;
  margin: 0px 20px 40px;
}

footer img.logo{
  padding: 0px 20px;
  }

footer iframe.twitter-timeline{
  min-height: 395px !important;
}

footer p.legal{
  clear: both;
  color: #999;
  width: 75%;
  margin: auto;
  text-align: center;
}

/* PORTFOLIO */
#featured-projects, #all-projects {
  text-align: center;
	background-color: #EFF1F2;
	padding-bottom: 20px;
}

#featured-projects .button{
	margin: 20px
}

#project-grid{
	margin: 10px 40px;
	padding-bottom: 0px;
}

#project-grid a.project{
	padding: 20px 20px 10px 20px;
	margin: 20px;
	width: calc( 50% - 85px );
	min-width: 260px;
	color: #333;
	height: 290px;
	display: inline-block;
	background-color: white;
	border-radius: 3px;
}

.grid-image{
	height: 220px;
	width: 100%;
	margin-bottom: 10px;
	background-size: 975px 305px;
	background-position: top left;	
  transition: all 0.5s ease-in-out;
	-webkit-transition: all 0.5s ease-in-out;
	-moz-transition: all 0.5s ease-in-out;
	-o-transition: all 0.5s ease-in-out;
}

a.project:hover .grid-image{
  background-position: bottom right;
	transition: all 5s ease-in-out;
	-webkit-transition: all 5s ease-in-out;
	-moz-transition: all 5s ease-in-out;
	-o-transition: all 5s ease-in-out;
}

#project-list {
  margin: 10px 40px;
}

.project-short {
  max-width: 980px;
  background-color: white;
  margin: 0 auto 40px;
  padding: 20px;
}

.project-short .banner-image {
  display: block;
  margin: 0 auto 20px;
}

.project-short p {
  text-align: left;
  font-size: 16px;
}

.project-short h4 a {
  color: #333;
  font-weight: 700;
}

#project h2, #project-metadata h2 {
  line-height: 45px;
  padding-bottom: 10px;
  }

/* CLIENTS */
#clients{
	margin: 0 40px;
}

#clients h4{
	text-indent: 20px;
	text-align: center;
}

#clients div{
	text-align: center;
	margin-top: 20px;
}

#clients .section-title{
    margin-top: 0px;
    }

#clients img{
	margin: 20px;
}

/* TOOLS */
#tools{
  margin: 10px 60px;
  padding-bottom: 40px;
}

#tools {
  padding-top: 10px;
}

#tools .section-title{
  text-align: center;
}

.tool{
  max-width: 980px;
  margin: 36px auto;
  clear: both;
  padding: 20px;
}

.tool div, .element div{
  padding: 0 30px;
  display: table-cell;
  vertical-align: middle;
  height: 250px;
}

.tool h4{
  font-size: 20px;
}

.tool p{
  margin: 5px 0px 0px;
  color: #666;
  line-height: 32px;
}

.tool .img{
  float: right;
  height: 250px;
  max-width: 20%;
  width: 320px;
  margin: 0 0 0 20px;
}

.tool:nth-child(even) .img{
  float: left;
  margin: 0 20px 0 0;
}

.guide{
  background-color: #f8f1fa;
}
  
.guide a.button.hollow{
  border-color: #A968B5;
  color: #A968B5;
}

.guide a.button.hollow:hover{
  background-color: #A968B5;
  color: white;
}

.indiemapper{
  background-color: #edf5fa;
}

.colorbrewer{
  background-color: #f4fbf9;
}

.colorbrewer a.button.hollow{
  border-color: #398E7A;
  color: #398E7A;
}

.colorbrewer a.button.hollow:hover{
  background-color: #398E7A;
}

.typographic{
  background-color: #f7f2e9;
}

.typographic a.button.hollow{
  border-color: #BA8B36;
  color: #BA8B36;
}

.typographic a.button.hollow:hover{
  background-color: #BA8B36;
}

/* ABOUT, TEAM, CONTACT */
#about, #team, #contact{
  margin: 20px 20%;
  text-align: center;
  line-height: 26px;
  padding-top: 10px;
}

.element p{
  line-height: 32px;
  margin-top: 0px;
  }

#data-design-code, #personnel{
  margin: 20px 80px 80px;
  padding-top: 10px;
}

#personnel {
  margin-top: 0;
}

#about p, #team p, #contact p{
  text-align: left;
  color: #333;
  line-height: 32px;
}

#data-design-code p, #personnel p{
  color: #333;
}

img.madison {
  display: block;
  margin: 0 auto;
  max-width: 100%;
}

.person {
  margin-bottom: 80px;
}

.person img {
  width: 150px;
}

.person div {
  margin-left: 200px;
}

.person h3 a {
  color: #333;
}

span.big{
font-size: 30px;
}

/* PROJECT */
#project{
  text-align: center;
}

img.banner {
  display: block;
  margin: auto;
}

#poster > *{
  width: 100%;
  height: 100%;
  background-size: cover;
  background-position: center center;
  background-repeat: no-repeat;
	position: relative;
}

#project-entry, #project-metadata{
  padding: 20px 90px;
  clear: both;
}

#project-metadata ul a{
  font-size: 18px;
  }

#project-entry p{
  color: #333;
  line-height: 32px;
  }
  
#project h5{
  color: #333;
  padding-top: 10px;
  }
  
#project h3{
  font-style: italic;
  letter-spacing: 0.5px;
  }
/* ... */

